--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "Salvage Search",
   "version": "0.1",
-  "homepage_url": "http://github.com/benetherington",
+  "homepage_url": "https://github.com/benetherington/salvage-search",
   "icons": {
     "48": "icons/SS-48.png"
   },
