--- a/manifest.json
+++ b/manifest.json
@@ -16,28 +16,26 @@
     "*://www.copart.com/lot/*",
     "*://www.iaai.com/*",
     "https://anvis.iaai.com/deepzoom*",
-    "https://knicknic.github.io/wasm-imagemagick/*",
     "webRequest", "webRequestBlocking"
   ],
   "background": {
     "scripts": [
       "search.js",
-      "canvastobmp.js",
       "background.js"
     ]
   },
   "browser_action": {
     "default_icon": {
-      "24": "icons/SS-24.bmp",
-      "48": "icons/SS-48.bmp",
-      "96": "icons/SS-96.bmp"
+      "24": "icons/SS-24.jpg",
+      "48": "icons/SS-48.jpg",
+      "96": "icons/SS-96.jpg"
     }
   },
   "page_action": {
     "default_icon": {
-      "24": "icons/SS-24.bmp",
-      "48": "icons/SS-48.bmp",
-      "96": "icons/SS-96.bmp"
+      "24": "icons/SS-24.jpg",
+      "48": "icons/SS-48.jpg",
+      "96": "icons/SS-96.jpg"
     },
     "default_title": "Salvage Search",
     "show_matches": [
