--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,10 @@
   "version": "2.0",
   "homepage_url": "https://github.com/benetherington/salvage-search",
   "icons": {
-    "24": "icons/SS-24.jpg",
-    "48": "icons/SS-48.jpg",
-    "96": "icons/SS-96.jpg"
+    "16": "icons/SS-16.png",
+    "32": "icons/SS-32.png",
+    "48": "icons/SS-48.png",
+    "128": "icons/SS-128.png"
   },
   "permissions": [
     "storage",
@@ -40,9 +41,10 @@
   ],
   "browser_action": {
     "default_icon": {
-      "24": "icons/SS-24.jpg",
-      "48": "icons/SS-48.jpg",
-      "96": "icons/SS-96.jpg"
+      "16": "icons/SS-16.png",
+      "32": "icons/SS-32.png",
+      "48": "icons/SS-48.png",
+      "128": "icons/SS-128.png"
     },
     "default_popup": "popup/actions.html"
   },
