--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "Salvage Search",
   "version": "2.0",
-  "homepage_url": "https://github.com/benetherington/salvage-search",
+  "homepage_url": "http://benetherington.com/salvage-search/",
   "icons": {
     "16": "icons/SS-16.png",
     "32": "icons/SS-32.png",
