--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     "storage", "unlimitedStorage",
     "clipboardRead",
     "tabs", "activeTab",
+    "*://*.copart.com/lot/*",
     "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*",
     "webRequest", "webRequestBlocking"
   ],
