--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "description": "Opens salvage inventory sites in new tabs, searching for the copied VIN",
+  "description": "Searches salvage sites for a VIN and automates image downloads.",
   "manifest_version": 2,
   "name": "Salvage Search",
   "version": "2.0",
-  "homepage_url": "http://benetherington.com/salvage-search/",
+  "homepage_url": "https://benetherington.com/salvage-search/",
   "icons": {
     "16": "icons/SS-16.png",
     "32": "icons/SS-32.png",
@@ -15,8 +15,7 @@
     "clipboardRead",
     "tabs", "activeTab",
     "*://*.copart.com/lot/*",
-    "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*",
-    "webRequest", "webRequestBlocking"
+    "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*"
   ],
   "background": {
     "scripts": [
