--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,9 @@
   "name": "Salvage Search",
   "version": "2.1",
   "homepage_url": "https://benetherington.com/salvage-search/",
-  "update_url": "https://benetherington.com/salbage-search/updates.json",
+  "browser_specific_settings": {
+    "gecko": {"update_url": "https://benetherington.com/salbage-search/updates.json"}
+  },
   "icons": {
     "16": "icons/SS-16.png",
     "32": "icons/SS-32.png",
