--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -2,7 +2,8 @@
   "description": "Searches salvage sites for a VIN and automates image downloads.",
   "manifest_version": 2,
   "name": "Salvage Search",
-  "version": "2.2",
+  "version": "2.3.3",
+  "version_name": "2.3 beta 3",
   "homepage_url": "https://benetherington.com/salvage-search/",
   "icons": {
     "16": "icons/SS-16.png",
@@ -13,13 +14,16 @@
   "permissions": [
     "storage", "unlimitedStorage",
     "clipboardRead",
-    "tabs", "activeTab",
+    "tabs",
     "*://*.copart.com/lot/*",
     "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*"
   ],
   "background": {
     "scripts": [
       "browser-polyfill.js",
+      "levenshtein.js",
+      "shared-assets.js",
+      "iaaiSearchParams.js",
       "search.js",
       "download-background.js",
       "background.js"
@@ -27,12 +31,14 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.copart.com/lot/*"],
-      "js": ["browser-polyfill.js", "download-copart.js"]
+      "matches": ["*://*.copart.com/*"],
+      "include_globs": ["*/lot/*"],
+      "js": ["browser-polyfill.js", "shared-assets.js", "download-copart.js"]
     },
     {
-      "matches": ["*://*.iaai.com/vehicledetails/*", "*://*.iaai.com/Vehicledetails?*"],
-      "js": ["browser-polyfill.js", "download-iaai.js"]
+      "matches": ["*://*.iaai.com/*"],
+      "include_globs": ["*/?ehicle?etails*"],
+      "js": ["browser-polyfill.js","shared-assets.js", "download-iaai.js"]
     }
   ],
   "browser_action": {
