--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -17,7 +17,7 @@
   "permissions": [
     "storage", "unlimitedStorage",
     "clipboardRead",
-    "tabs",
+    "tabs", "downloads",
     "*://*.copart.com/lot/*",
     "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*",
     "*://*.row52.com/*",
