Fix poctra permission

--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -21,7 +21,7 @@
     "*://*.copart.com/lot/*",
     "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*",
     "*://*.row52.com/*",
-    "*://*poctra.com/*"
+    "*://*.poctra.com/*"
   ],
   "background": {
     "scripts": [
