--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -2,8 +2,8 @@
   "description": "Searches salvage sites for a VIN and automates image downloads.",
   "manifest_version": 2,
   "name": "Salvage Search",
-  "version_name": "2.3.2rc",
-  "version": "2.3.2.999",
+  "version_name": "2.3.3",
+  "version": "2.3.3",
   "homepage_url": "https://benetherington.com/salvage-search/",
   "icons": {
     "16": "icons/SS-16.png",
