--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -2,7 +2,7 @@
   "description": "Searches salvage sites for a VIN and automates image downloads.",
   "manifest_version": 2,
   "name": "Salvage Search",
-  "version": "2.3.2rc",
+  "version": "2.3.3",
   "homepage_url": "https://benetherington.com/salvage-search/",
   "browser_specific_settings": {
     "gecko": {"update_url": "https://benetherington.com/salvage-search/updates.json"}
