--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -12,7 +12,7 @@
     "128": "icons/SS-128.png"
   },
   "permissions": [
-    "storage", "unlimitedStorage",
+    "storage",
     "clipboardRead",
     "tabs", "downloads",
     "*://*.copart.com/lot/*",
@@ -25,9 +25,13 @@
     "scripts": [
       "browser-polyfill.js",
       "shared-assets.js",
+      "salvage_api/copart.js",
+      "salvage_api/iaai.js",
+      "salvage_api/row52.js",
+      "archive_api/poctra.js",
+      "archive_api/bidfax.js",
       "search.js",
-      "download.js",
-      "background.js"
+      "download.js"
     ]
   },
   "browser_action": {
