--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -14,7 +14,7 @@
     "128": "icons/SS-128.png"
   },
   "permissions": [
-    "storage", "unlimitedStorage",
+    "storage",
     "clipboardRead",
     "tabs", "downloads",
     "*://*.copart.com/lot/*",
@@ -33,8 +33,7 @@
       "archive_api/poctra.js",
       "archive_api/bidfax.js",
       "search.js",
-      "download.js",
-      "background.js"
+      "download.js"
     ]
   },
   "browser_action": {
