--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -1,48 +1,55 @@
 {
-  "description": "Searches salvage sites for a VIN and automates image downloads.",
-  "manifest_version": 2,
-  "name": "Salvage Search",
-  "version": "3.0.3",
-  "homepage_url": "https://benetherington.com/salvage-search/",
-  "browser_specific_settings": {
-    "gecko": {"update_url": "https://benetherington.com/salvage-search/updates.json"}
-  },
-  "icons": {
-    "16": "icons/SS-16.png",
-    "32": "icons/SS-32.png",
-    "48": "icons/SS-48.png",
-    "128": "icons/SS-128.png"
-  },
-  "permissions": [
-    "storage",
-    "clipboardRead",
-    "tabs", "downloads",
-    "*://*.copart.com/lot/*",
-    "*://*.iaai.com/*", "https://*.anvis.iaai.com/deepzoom*", "*://*.spincar.com/*",
-    "*://*.row52.com/*",
-    "*://*.poctra.com/*",
-    "*://en.bidfax.info/*"
-  ],
-  "background": {
-    "scripts": [
-      "browser-polyfill.js",
-      "shared-assets.js",
-      "salvage_api/copart.js",
-      "salvage_api/iaai.js",
-      "salvage_api/row52.js",
-      "archive_api/poctra.js",
-      "archive_api/bidfax.js",
-      "search.js",
-      "download.js"
-    ]
-  },
-  "browser_action": {
-    "default_icon": {
-      "16": "icons/SS-16.png",
-      "32": "icons/SS-32.png",
-      "48": "icons/SS-48.png",
-      "128": "icons/SS-128.png"
+    "description": "Searches salvage sites for a VIN and automates image downloads.",
+    "manifest_version": 2,
+    "name": "Salvage Search",
+    "version": "3.1.0",
+    "homepage_url": "https://benetherington.com/salvage-search/",
+    "browser_specific_settings": {
+        "gecko": {
+            "update_url": "https://benetherington.com/salvage-search/updates.json"
+        }
     },
-    "default_popup": "popup/actions.html"
-  }
+    "icons": {
+        "16": "icons/SS-16.png",
+        "32": "icons/SS-32.png",
+        "48": "icons/SS-48.png",
+        "128": "icons/SS-128.png"
+    },
+    "permissions": [
+        "storage",
+        "clipboardRead",
+        "tabs",
+        "downloads",
+        "*://*.copart.com/lot/*",
+        "*://*.iaai.com/*",
+        "https://*.anvis.iaai.com/deepzoom*",
+        "*://*.spincar.com/*",
+        "*://*.row52.com/*",
+        "*://*.poctra.com/*",
+        "*://en.bidfax.info/*",
+        "*://stat.vin/*"
+    ],
+    "background": {
+        "scripts": [
+            "browser-polyfill.js",
+            "shared-assets.js",
+            "salvage_api/copart.js",
+            "salvage_api/iaai.js",
+            "salvage_api/row52.js",
+            "archive_api/poctra.js",
+            "archive_api/bidfax.js",
+            "archive_api/statvin.js",
+            "search.js",
+            "download.js"
+        ]
+    },
+    "browser_action": {
+        "default_icon": {
+            "16": "icons/SS-16.png",
+            "32": "icons/SS-32.png",
+            "48": "icons/SS-48.png",
+            "128": "icons/SS-128.png"
+        },
+        "default_popup": "popup/actions.html"
+    }
 }
